# dummy-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  generic_bootstrap.sh
.github/workflows/: ci.yaml
cmake/: dummy-cpp-config.cmake.in
data/: input-test.csv
src/: CMakeLists.txt  Data.cc  Data.hh  InputDTO.hh  OutputDTO.hh  main.cc
src/core/: CMakeLists.txt  InputDTO.cc
src/core/src/: CMakeLists.txt  Data.cc  Data.hh  OutputDTO.cc
src/core/unit-tests/: CMakeLists.txt  DataTST.cc
src/exe/: CMakeLists.txt
src/unit-tests/: CMakeLists.txt  DummyTST.cc  main.cc
